k8s/22-email-poller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-poller
  namespace: dms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: email-poller
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: email-poller
        app.kubernetes.io/part-of: dms
    spec:
      containers:
        - name: email-poller
          image: ghcr.io/matteociaroni/dms-email_poller:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              memory: "256Mi"
