k8s/23-agent-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-worker
  namespace: dms
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: agent-worker
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: agent-worker
        app.kubernetes.io/part-of: dms
    spec:
      containers:
        - name: agent-worker
          image: ghcr.io/matteociaroni/dms-agent_worker:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "300m"
              memory: "1Gi"
            limits:
              memory: "2Gi"
