k8s/23-email-poller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-poller
  namespace: dms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-poller
  template:
    metadata:
      labels:
        app: email-poller
    spec:
      containers:
        - name: email-poller
          image: REGISTRY/dms-email-poller:TAG  # da sostituire
