k8s/12-seaweedfs-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs-master
  namespace: dms
spec:
  clusterIP: None
  selector:
    app: seaweedfs-master
  ports:
    - port: 9333
      targetPort: 9333
      name: http
    - port: 19333
      targetPort: 19333
      name: grpc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seaweedfs-master
  namespace: dms
spec:
  serviceName: seaweedfs-master
  replicas: 1
  selector:
    matchLabels:
      app: seaweedfs-master
  template:
    metadata:
      labels:
        app: seaweedfs-master
    spec:
      containers:
        - name: master
          image: chrislusf/seaweedfs:latest
          args:
            - "master"
            - "-ip=seaweedfs-master"
            - "-mdir=/data"
          ports:
            - containerPort: 9333
            - containerPort: 19333
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
