k8s/13-seaweedfs-volume.yaml
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs-volume
  namespace: dms
spec:
  clusterIP: None
  selector:
    app: seaweedfs-volume
  ports:
    - port: 8080
      targetPort: 8080
      name: http
    - port: 18080
      targetPort: 18080
      name: grpc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seaweedfs-volume
  namespace: dms
spec:
  serviceName: seaweedfs-volume
  replicas: 1
  selector:
    matchLabels:
      app: seaweedfs-volume
  template:
    metadata:
      labels:
        app: seaweedfs-volume
    spec:
      containers:
        - name: volume
          image: chrislusf/seaweedfs:latest
          args:
            - "volume"
            - "-mserver=seaweedfs-master:9333"
            - "-port=8080"
            - "-ip=seaweedfs-volume"
            - "-dir=/data"
          ports:
            - containerPort: 8080
            - containerPort: 18080
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 50Gi
