k8s/14-seaweedfs-filer.yaml
apiVersion: v1
kind: Service
metadata:
  name: seaweedfs-filer
  namespace: dms
spec:
  clusterIP: None
  selector:
    app: seaweedfs-filer
  ports:
    - port: 8888
      targetPort: 8888
      name: http
    - port: 18888
      targetPort: 18888
      name: grpc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: seaweedfs-filer
  namespace: dms
spec:
  serviceName: seaweedfs-filer
  replicas: 1
  selector:
    matchLabels:
      app: seaweedfs-filer
  template:
    metadata:
      labels:
        app: seaweedfs-filer
    spec:
      containers:
        - name: filer
          image: chrislusf/seaweedfs:latest
          args:
            - "filer"
            - "-master=seaweedfs-master:9333"
            - "-ip=seaweedfs-filer"
          ports:
            - containerPort: 8888
            - containerPort: 18888
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 5Gi
